<resources>
    <string name="app_name">Monicet</string>
    <string name="sighting">Sighting</string>
    <string name="start_trip">Start trip</string>
    <string name="add_sighting">Add sighting</string>
    <string name="edit_sighting">Edit sighting</string>
    <string name="my_sightings">My sightings</string>
    <string name="trip_was_started">A trip was started</string>
    <string name="open_trip">OPEN</string>
    <string name="delete_trip">DELETE</string>
    <string name="trip_description">DESCRIPTION</string>
    <string name="animal_description_dialog_title">
        Cetacean description
    </string>
    <string name="weather_description_dialog_title">
        Weather description
    </string>
    <string name="sighting_comments_dialog_title">
        Other details and comments
    </string>
    <string name="delete_trip_dialog_title">
        Delete trip
    </string>
    <string name="delete_trip_dialog_message">
        Are you sure that you want to delete this trip?
    </string>
    <string name="my_no">NO</string>
    <string name="email_account">Please, choose an email account</string>
    <string name="google_api_client_connection_suspended">
        Your GoogleApiClient connection was suspended. Please try to reconnect and then reopen the application.
    </string>
    <string name="google_api_client_connection_failed">
        Your GoogleApiClient connection failed. Please try to connect and then reopen the application.
    </string>
    <string name="tracking_dialog_title">Continuous GPS sampling</string>
    <string name="tracking_dialog_message">
        You are currently in the normal GPS sampling mode.\nActivate the continuous GPS sampling mode, which uses a lot of battery?
    </string>
    <string name="checkbox_tracking_text">
        Select this checkbox, if you\'d like to start the continuous GPS sampling mode, which uses a lot of battery.
    </string>
    <string name="turn_on_gps_dialog_title"> Turn on GPS </string>
    <string name="turn_on_gps_dialog_message">Please, turn on the GPS.</string>
    <string name="gps_user_interval_text">
        Please, select how often you want to sample GPS coordinates. By default, it samples every 5 minutes. Battery is saved when a large number is selected.
    </string>
    <string name="gps_user_duration_text">
        Select the approximate duration of your trip, in hours.
    </string>
    <string name="gps_fix_message">Please, press again after the GPS signal has fixed.</string>
    <string name="gps_fix_wait_message">
        Please, make sure that your GPS is turned on and set to use all available sources. When this text disappears, the GPS signal has fixed and you can start your trip.
    </string>
    <string name="send_wait_message">Please, wait. The application will close when the data is saved.</string>
    <string name="comments_message_title">Additional information</string>
    <string name="user_gps_message">You can insert here the GPS coordinates from your own, separate GPS device.</string>
    <string name="comments_message">You can also add comments.</string>
    <string name="double_quote">\"</string>
    <string name="start_animal_quantity_message">
        How many did you see in the beginning of the sighting?
    </string>
    <string name="end_animal_quantity_message">
        How many did you see at the end of the sighting?
    </string>
    <string name="only_one_animal_message">
        Please, select only one specie.\nOnly one number can be different from zero.\nPlease set to zero the other quantities that are not equal to zero.
    </string>
    <string name="no_animals_to_save_message">
        There is nothing to save.\nPlease, modify the number of animals that you\'ve seen.
    </string>
    <string name="no_sighting_to_send_message">
        There is nothing to send.\nPlease, add a sighting when you\'ve reached your first destination.
    </string>
    <string name="no_sighting_to_show_message">
        There is nothing to show.\nPlease, add a sighting when you\'ve reached your first destination.
    </string>
    <string name="sighting_saved_confirmation_message">
        The sighting has been saved.
    </string>
    <string name="sighting_finished_confirmation_message">
        The sighting has been finished.
    </string>
    <string name="send_sightings_title_message">
        Are you sure you want to send these sightings?
    </string>
    <string name="sighting_saved_instructions_message">
        Press ADD to add sightings or SEND if you\'ve reached the end of your trip.
    </string>
    <string name="delete_sighting_title">
        Delete sighting
    </string>
    <string name="delete_sighting_message">
        Are you sure you want to delete this sighting?
    </string>
    <string name="sighting_comments_hint">Age of animals, position</string>
    <string name="search">Search</string>
    <string name="species_not_on_your_list">Species not on your list</string>
    <string name="all_in_one">All in one</string>
    <string-array name="aBaleenWhalesFamily">
        <item>@string/MegapteraNoveangliae</item>
        <item>@string/BalaenopteraMusculus</item>
        <item>@string/BalaenopteraPhysalus</item>
        <item>@string/BalaenopteraBorealis</item>
        <item>@string/BalaenopteraEdeni</item>
        <item>@string/BalaenopteraAcutorostrata</item>
        <item>@string/BalaenaMysticetus</item>
        <item>@string/EubalaenaGlacialis</item>
        <item>@string/EubalaenaJaponica</item>
        <item>@string/EubalaenaAustralis</item>
        <item>@string/CapereaMarginata</item>
        <item>@string/EschrichtiusRobustus</item>
        <item>@string/BalaenopteraBonaerensis</item>
        <item>@string/BalaenopteraOmurai</item>
    </string-array>
    <string-array name="bToothedWhalesFamily">
        <item>@string/PhyseterMacrocephalus</item>
        <item>@string/KogiaBreviceps</item>
        <item>@string/KogiaSima</item>
        <item>@string/DelphinapterusLeucas</item>
        <item>@string/MonodonMonoceros</item>
        <item>@string/PeponocephalaElectra</item>
    </string-array>
    <string-array name="cBeakedWhalesFamily">
        <item>@string/ZiphiusSp</item>
        <item>@string/ZiphiusCavirostris</item>
        <item>@string/MesoplodonBidens</item>
        <item>@string/HyperoodonAmpullatus</item>
        <item>@string/MesoplodonDensirostris</item>
        <item>@string/MesoplodonMirus</item>
        <item>@string/BerardiusArnuxii</item>
        <item>@string/BerardiusBairdii</item>
        <item>@string/HyperoodonPlanifrons</item>
        <item>@string/IndopacetusPacificus</item>
        <item>@string/MesoplodonBowdoini</item>
        <item>@string/MesoplodonCarlhubbsi</item>
        <item>@string/MesoplodonEuropaeus</item>
        <item>@string/MesoplodonGinkgodens</item>
        <item>@string/MesoplodonGrayi</item>
        <item>@string/MesoplodonHectori</item>
        <item>@string/MesoplodonHotaula</item>
        <item>@string/MesoplodonLayardii</item>
        <item>@string/MesoplodonPerrini</item>
        <item>@string/MesoplodonPeruvianus</item>
        <item>@string/MesoplodonStejnegeri</item>
        <item>@string/MesoplodonTraversii</item>
        <item>@string/TasmacetusShepherdi</item>
    </string-array>
    <string-array name="dBigDolphinsFamily">
        <item>@string/TursiopsTruncatus</item>
        <item>@string/StenoBredanensis</item>
        <item>@string/GrampusGriseus</item>
        <item>@string/SousaTeuszii</item>
        <item>@string/SousaChinensis</item>
        <item>@string/SousaPlumbea</item>
        <item>@string/SousaSahulensis</item>
        <item>@string/TursiopsAduncus</item>
    </string-array>
    <string-array name="eSmallDolphinsFamily">
        <item>@string/StenellaFrontalis</item>
        <item>@string/DelphinusDelphis</item>
        <item>@string/StenellaCoeruleoalba</item>
        <item>@string/CephalorhynchusCommersonii</item>
        <item>@string/CephalorhynchusEutropia</item>
        <item>@string/CephalorhynchusHeavisidii</item>
        <item>@string/CephalorhynchusHectori</item>
        <item>@string/LagenodelphisHosei</item>
        <item>@string/LagenorhynchusAcutus</item>
        <item>@string/LagenorhynchusAustralis</item>
        <item>@string/LagenorhynchusCruciger</item>
        <item>@string/LagenorhynchusObliquidens</item>
        <item>@string/LagenorhynchusObscurus</item>
        <item>@string/LissodelphisBorealis</item>
        <item>@string/LissodelphisPeronii</item>
        <item>@string/OrcaellaBrevirostris</item>
        <item>@string/OrcaellaHeinsohni</item>
        <item>@string/SotaliaGuianensis</item>
        <item>@string/StenellaAttenuata</item>
        <item>@string/StenellaClymene</item>
        <item>@string/StenellaLongirostris</item>
    </string-array>
    <string-array name="fBlackDolphinsFamily">
        <item>@string/GlobicephalaMacrorhynchus</item>
        <item>@string/OrcinusOrca</item>
        <item>@string/PseudorcaCrassidens</item>
        <item>@string/GlobicephalaMelas</item>
        <item>@string/FeresaAttenuata</item>
    </string-array>
    <string-array name="gPorpoisesFamily">
        <item>@string/PhocaenaPhocaena</item>
        <item>@string/PontoporiaBlainvillei</item>
        <item>@string/NeophocaenaPhocaenoides</item>
        <item>@string/PhocoenaDioptrica</item>
        <item>@string/PhocoenaSinus</item>
        <item>@string/PhocoenaSpinipinnis</item>
        <item>@string/PhocoenoidesDalli</item>
    </string-array>
    <string-array name="hSeaTurtlesFamily">
        <item>@string/CarettaCaretta</item>
        <item>@string/DermochelysCoriacea</item>
        <item>@string/CheloniaMydas</item>
        <item>@string/EretmochelysImbricata</item>
        <item>@string/LepidochelysKempii</item>
        <item>@string/LepidochelysOlivacea</item>
        <item>@string/NatatorDepressus</item>
    </string-array>
    <string name="others">Others</string>
    <string name="StenellaFrontalis">Atlantic spotted dolphin=Stenella frontalis</string>
    <string name="TursiopsTruncatus">Common bottlenose dolphin=Tursiops truncatus</string>
    <string name="StenoBredanensis">Rough-toothed dolphin=Steno bredanensis</string>
    <string name="sea_state">Sea state (first 7 numbers from the Beaufort wind force scale)</string>
    <string name="level0_calm">
        Wave height: 0 m. Sea like a mirror.
    </string>
    <string name="level1_light_air">
        Wave height: 0–0.2 m. Ripples with appearance of scales are formed, without foam crests.
    </string>
    <string name="level2_light_breeze">
        Wave height: 0.2–0.5 m. Small wavelets still short but more pronounced; crests have a glassy appearance but do not break.
    </string>
    <string name="level3_gentle_breeze">
        Wave height: 0.5–1 m. Large wavelets; crests begin to break; foam of glassy appearance; perhaps scattered white horses.
    </string>
    <string name="level4_breeze">
        Wave height: 1–2 m. Small waves becoming longer; fairly frequent white horses.
    </string>
    <string name="level5_fresh_breeze">
        Wave height: 2–3 m. Moderate waves taking a more pronounced long form; many white horses are formed; chance of some spray.
    </string>
    <string name="level6_strong_breeze">
        Wave height: 3–4 m. Large waves begin to form; the white foam crests are more extensive everywhere; probably some spray.
    </string>
    <string name="visibility">Visibility</string>
    <string name="very_bad_less_than_1km">Very Bad (less than 1 km)</string>
    <string name="bad_1_to_5km">Bad (1 to 5 km)</string>
    <string name="good_5_to_10km">Good (5 to 10 km)</string>
    <string name="very_good_more_than_10km">Very good (more than 10 km)</string>
    <string name="company">Company</string>
    <string name="boat">Boat</string>
    <string name="skipper">Skipper</string>
    <string name="guide">Guide</string>
</resources>