<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/visibility_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/visibility" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/very_bad_visib_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_bad_less_than_1km" />
            <RadioButton android:id="@+id/bad_visib_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_1_to_5km" />
            <RadioButton android:id="@+id/good_visib_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_5_to_10km" />
            <RadioButton android:id="@+id/very_good_visib_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/very_good_more_than_10km" />
        </RadioGroup>

        <TextView
            android:id="@+id/sea_state_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/sea_state" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/level0_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level0_calm" />
            <RadioButton android:id="@+id/level1_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level1_light_air" />
            <RadioButton android:id="@+id/level2_sea_stat_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level2_light_breeze" />
            <RadioButton android:id="@+id/level3_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level3_gentle_breeze" />
            <RadioButton android:id="@+id/level4_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level4_breeze" />
            <RadioButton android:id="@+id/level5_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level5_fresh_breeze" />
            <RadioButton android:id="@+id/level6_sea_state_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/level6_strong_breeze" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>