<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/activity_horizontal_margin">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_gps_message"
        android:text="@string/user_gps_message"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_gps_north"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="N" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/lat_degrees_edit_text" />

        <TextView
            android:id="@+id/user_gps_degree_sign_north"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="\u00B0" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/lat_minutes_edit_text" />

        <TextView
            android:id="@+id/user_gps_minute_sign_north"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="\'" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/lat_seconds_edit_text" />

        <TextView
            android:id="@+id/user_gps_second_sign_north"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/double_quote" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_gps_west"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="W" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/long_degrees_edit_text" />

        <TextView
            android:id="@+id/user_gps_degree_sign_west"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="\u00B0" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/long_minutes_edit_text" />

        <TextView
            android:id="@+id/user_gps_minute_sign_west"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="\'" />

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/long_seconds_edit_text" />

        <TextView
            android:id="@+id/user_gps_second_sign_west"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/double_quote" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comments_message"
        android:text="@string/comments_message"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/comments_edit_text"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>
